search/testbed-web/kubernetes/ingress-prod-testbed-alpha.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testbed-alpha-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/app-root: /testbed
spec:
  tls:
  - hosts:
    - testbed.tbs.alpha.canada.ca
    secretName: testbed-alpha-tls-secret-prod
  rules:
  - host: testbed.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: testbed-web
          servicePort: 9090
        path: /
